--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
-    "ng-zorro-antd": "^0.0.0-NOT-USED",
+    "echarts": "^4.5.0",
+    "ng-zorro-antd": "^8.5.1",
+    "ngx-echarts": "^4.2.2",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
